Added US state part

--- a/Wiki table scraping.ipynb
+++ b/Wiki table scraping.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cleanNumber(string):\n",
-    "    return int(cleanCountry(string).replace(\",\",\"\").replace(\"–\",\"0\").replace(\"?\",\"0\").replace(\"-\",\"0\").replace(\"~\",\"0\"))"
+    "    return int(cleanCountry(string).replace(\",\",\"\").replace(\".\",\"\").replace(\"–\",\"0\").replace(\"?\",\"0\").replace(\"-\",\"0\").replace(\"~\",\"0\"))"
    ]
   },
   {
@@ -135,22 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946086474']"
+       "['https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946409034']"
       ]
      },
-     "execution_count": 609,
+     "execution_count": 720,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getUrls([\"18 March 2020\"],500)"
+    "getUrls([\"20 March 2020\"],500)"
    ]
   },
   {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,9 @@
     " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=945597450',\n",
     " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=945762744',\n",
     " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=945925005',\n",
-    " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946086474']"
+    " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946086474',\n",
+    " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946244618',\n",
+    " 'https://en.wikipedia.org/w/index.php?title=Template:2019%E2%80%9320_coronavirus_pandemic_data&oldid=946409034']"
    ]
   },
   {
@@ -607,17 +609,18 @@
     "       'Bulgaria', 'Burkina Faso', 'Cambodia', 'Cameroon', 'Canada',\n",
     "       'Central African Republic', 'Chile', 'China', 'Colombia',\n",
     "       'Costa Rica', 'Croatia', 'Cuba', 'Cyprus', 'Czech Republic',\n",
-    "       'DR Congo', 'Denmark', 'Diamond Princess', 'Dominican Republic',\n",
-    "       'Ecuador', 'Egypt', 'Equatorial Guinea', 'Estonia', 'Eswatini',\n",
-    "       'Ethiopia', 'Finland', 'France', 'Gabon', 'Gambia', 'Georgia',\n",
-    "       'Germany', 'Ghana', 'Gibraltar', 'Grand Princess', 'Greece',\n",
-    "       'Guatemala', 'Guernsey', 'Guinea', 'Guyana', 'Honduras',\n",
-    "       'Hong Kong', 'Hungary', 'Iceland', 'India', 'Indonesia', 'Iran',\n",
-    "       'Iraq', 'Ireland', 'Israel', 'Italy', 'Ivory Coast', 'Jamaica',\n",
-    "       'Japan', 'Jersey', 'Jordan', 'Kazakhstan', 'Kenya', 'Kosovo',\n",
-    "       'Kuwait', 'Latvia', 'Lebanon', 'Liberia', 'Liechtenstein',\n",
-    "       'Lithuania', 'Luxembourg', 'Macau', 'Malaysia', 'Maldives',\n",
-    "       'Malta', 'Mauritania', 'Mexico', 'Moldova', 'Monaco', 'Mongolia',\n",
+    "       'DR Congo', 'Denmark', 'Diamond Princess', 'Djibouti',\n",
+    "       'Dominican Republic', 'Ecuador', 'Egypt', 'Equatorial Guinea',\n",
+    "       'Estonia', 'Eswatini', 'Ethiopia', 'Finland', 'France', 'Gabon',\n",
+    "       'Gambia', 'Georgia', 'Germany', 'Ghana', 'Gibraltar',\n",
+    "       'Grand Princess', 'Greece', 'Guatemala', 'Guernsey', 'Guinea',\n",
+    "       'Guyana', 'Honduras', 'Hong Kong', 'Hungary', 'Iceland', 'India',\n",
+    "       'Indonesia', 'Iran', 'Iraq', 'Ireland', 'Israel', 'Italy',\n",
+    "       'Ivory Coast', 'Jamaica', 'Japan', 'Jersey', 'Jordan',\n",
+    "       'Kazakhstan', 'Kenya', 'Kosovo', 'Kuwait', 'Kyrgyzstan', 'Latvia',\n",
+    "       'Lebanon', 'Liberia', 'Liechtenstein', 'Lithuania', 'Luxembourg',\n",
+    "       'Macau', 'Malaysia', 'Maldives', 'Malta', 'Mauritania',\n",
+    "       'Mauritius', 'Mexico', 'Moldova', 'Monaco', 'Mongolia',\n",
     "       'Montenegro', 'Morocco', 'Namibia', 'Nepal', 'Netherlands',\n",
     "       'New Zealand', 'Nigeria', 'North Korea', 'North Macedonia',\n",
     "       'Northern Cyprus', 'Norway', 'Oman', 'Pakistan', 'Palestine',\n",
@@ -630,12 +633,13 @@
     "       'Switzerland', 'Taiwan', 'Tanzania', 'Thailand', 'Togo',\n",
     "       'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Ukraine',\n",
     "       'United Arab Emirates', 'United Kingdom', 'United States',\n",
-    "       'Uruguay', 'Uzbekistan', 'Vatican City', 'Venezuela', 'Vietnam']"
+    "       'Uruguay', 'Uzbekistan', 'Vatican City', 'Venezuela', 'Vietnam',\n",
+    "       'Zambia']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Barbados', 'Gambia', 'Montenegro'}"
+       "{'Chad', 'El Salvador', 'Fiji', 'Nicaragua', 'Niger'}"
       ]
      },
-     "execution_count": 623,
+     "execution_count": 725,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +677,7 @@
        "{'Aruba', 'Gibraltar', 'Grand Princess', 'Guernsey', 'Jersey', 'North Korea'}"
       ]
      },
-     "execution_count": 624,
+     "execution_count": 726,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,6 +710,174 @@
     "allData=np.array([header1,header2,data])\n",
     "\n",
     "np.savetxt(\"/home/handmer/Documents/Projects/Covid/COVID19numbersToday.csv\",allData,delimiter=\",\", fmt='%s', comments='',)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's crunch the US data from covidtracking.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 730,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "USData=[]\n",
+    "\n",
+    "with open(\"/home/handmer/Documents/Projects/Covid/COVIDUSA.csv\") as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
+    "    line_count = 0\n",
+    "    for row in csv_reader:\n",
+    "        USData.append(row)\n",
+    "        #if line_count == 0:\n",
+    "        #    print(f'Column names are {\", \".join(row)}')\n",
+    "        #    line_count += 1\n",
+    "        #else:\n",
+    "        #    print(row)\n",
+    "        #    line_count += 1\n",
+    "    #print(f'Processed {line_count} lines.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 731,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates=np.sort(list(set([x[0] for x in USData[1:]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 732,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states=np.sort(list(set([x[1] for x in USData[1:]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 733,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['20200304', '20200305', '20200306', '20200307', '20200308',\n",
+       "       '20200309', '20200310', '20200311', '20200312', '20200313',\n",
+       "       '20200314', '20200315', '20200316', '20200317', '20200318',\n",
+       "       '20200319'], dtype='<U8')"
+      ]
+     },
+     "execution_count": 733,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 735,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generateDictFromDate(date):\n",
+    "    myDict={}\n",
+    "    for x in USData:\n",
+    "        if x[0]==date:\n",
+    "            out=[]\n",
+    "            for y in x[2:]:\n",
+    "                try:\n",
+    "                    out.append(int(y))\n",
+    "                except:\n",
+    "                    out.append(0)\n",
+    "            myDict[x[1]]=out\n",
+    "    return myDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 736,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USDicts=[generateDictFromDate(d) for d in dates]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 737,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 27, 5, 0, 34]"
+      ]
+     },
+     "execution_count": 737,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USDicts[0]['AZ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 738,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getData3(dic,key):\n",
+    "    try:\n",
+    "        output = dic[key]\n",
+    "    except:\n",
+    "        output = [\"\",\"\",\"\",\"\",\"\"]\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 739,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Positive', 'Negative', 'Pending', 'Death', 'Total']"
+      ]
+     },
+     "execution_count": 739,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USData[0][2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 740,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2=np.array([np.concatenate([getData3(USD,key) for key in states]) for USD in USDicts])\n",
+    "header1=np.concatenate([[key,\"\",\"\",\"\",\"\"] for key in states])\n",
+    "header2=np.concatenate([USData[0][2:] for key in states])\n",
+    "allData2=np.concatenate(((header1,header2),data2),axis=0)\n",
+    "np.savetxt(\"/home/handmer/Documents/Projects/Covid/COVID19USData.csv\",allData2,delimiter=\",\", fmt='%s', comments='',)"
    ]
   },
   {
